--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="container" style="margin-top:100px">
-  <p>Copyright ©2017 Rails101
+  <p class="text-center">Copyright ©2017 Rails101
   <br>Design by
   <a href="www.baidu.com" target="_blank">Lotus</a>
 </p>
