--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -2,6 +2,13 @@
   <h2>新增讨论版</h2>
   <hr>
   <%= form_for @group do |f| %>
+
+  <% if @group.errors.full_messages.each do |msg| %>
+    <ul>
+      <li><%= msg %></li>
+      <% end %>
+    </ul>
+  <% end %>
   标题
   <%=f.text_field :title %>
   <br>
