--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -3,6 +3,12 @@
 
   <hr>
   <%=form_for @group do |f| %>
+  <% if @group.errors.full_messages.each do |msg| %>
+    <ul>
+      <li><%= msg %></li>
+      <% end %>
+    </ul>
+  <% end %>
   标题
   <%=f.text_field :title %>
   <br>
