--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,22 +1,5 @@
 <div class="col-md-4 col-md-offest-4">
   <h2>新增讨论版</h2>
   <hr>
-  <%= form_for @group do |f| %>
-
-  <% if @group.errors.full_messages.each do |msg| %>
-    <ul>
-      <li><%= msg %></li>
-      <% end %>
-    </ul>
-  <% end %>
-  标题
-  <%=f.text_field :title %>
-  <br>
-  叙述
-  <br>
-  <%= f.text_area :description %>
-  <br>
-
-  <%= f.submit "Submit",disable_with: 'Submiting...' %>
-  <% end  %>
+  <%= render 'form' %>
 </div>
