--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -7,8 +7,8 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
               <% if !current_user %>
-                <li><%= link_to("注册", 'new_user_registration_path') %></li>
-                <li><%= link_to("登录", 'new_user_session_path') %></li>
+                <li><%= link_to("注册", new_user_registration_path) %></li>
+                <li><%= link_to("登录", new_user_session_path) %></li>
               <% else %>
                 <li>
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -16,7 +16,11 @@
                     <b class="caret"></b>
                   </a>
                   <ul class="dropdown-menu">
-                    <li><%= link_to "退出", 'destroy_user_session_path', :method => :delete %></li>
+                    <li><%=link_to("My groups",account_groups_path) %></li>
+                    <li><%=link_to("My posts",account_posts_path) %></li>
+                    
+                    <li class="divider"></li>
+                    <li><%= link_to "退出", destroy_user_session_path, :method => :delete %></li>
                   </ul>
                 </li>
               <% end  %>
